--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -4,10 +4,94 @@ html
     meta(charset='utf-8')
     title= title
     link(href='/less/app.css', rel='stylesheet')
+    link(href='/css/normalize.css', rel='stylesheet')
+    link(href='/css/buttons.css', rel='stylesheet')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+
   body
-    block content
+    .container
+    .row
+        .col-md-12
+          nav.navbar.navbar-inverse(role='navigation')
+            //
+               Brand and toggle get grouped for better mobile display
+            .navbar-header
+              button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.navbar-brand P2
+            //
+               Collect the nav links, forms, and other content for toggling
+            #bs-example-navbar-collapse-1.collapse.navbar-collapse
+              ul.nav.navbar-nav
+                li
+                  a(class='glyphicon glyphicon-home', href='/') Home
+                li
+                  a(class='glyphicon glyphicon-user', href='/users/dashboard') Dashboard
+                li
+                  a(class='glyphicon glyphicon-search', href='/courses/index') Search
+
+
+              ul.nav.navbar-nav.navbar-right
+                li.dropdown
+                    a.dropdown-toggle(href='http://www.jquery2dotnet.com', data-toggle='dropdown')
+                      | Register
+                      b.caret
+                    ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
+                      li
+                        .row
+                          .col-md-12
+                            form#login-nav.form(role='form', method='post', action='/register', accept-charset='UTF-8')
+                              .form-group
+                                label.sr-only(for='exampleInputEmail2') Email address
+                                input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
+                              .form-group
+                                label.sr-only(for='exampleInputPassword2') Password
+                                input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
+                              .form-group
+                                button.btn.btn-primary.btn-block(type='submit') Register
+
+
+
+                li.dropdown
+                  a.dropdown-toggle(href='http://www.jquery2dotnet.com', data-toggle='dropdown')
+                    | Sign in
+                    b.caret
+                  ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
+                    li
+                      .row
+                        .col-md-12
+                          form#login-nav.form(role='form', method='post', action='/login', accept-charset='UTF-8')
+                            .form-group
+                              label.sr-only(for='exampleInputEmail2') Email address
+                              input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
+                            .form-group
+                              label.sr-only(for='exampleInputPassword2') Password
+                              input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
+                            .checkbox
+                              label
+                                input(type='checkbox')
+                                | Remember me
+                            .form-group
+                              button.btn.btn-success.btn-block(type='submit') Sign in
+                //indent
+                - console.log(isLogin)
+                if(isLogin !== null)
+                  li
+                    a(href='/logout') Logout
+            //
+               /.navbar-collapse
+
+
+
+
+
+  block content
 
     script(src='/js/vendor/jquery-2.1.1.js')
+    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/js/vendor/lodash-2.4.1.js')
     script(src='/js/vendor/moment-2.6.0.js')
     script(src='/js/vendor/traceur.js')
@@ -16,4 +100,4 @@ html
     script(src='/js/es6/compiled/main.js')
     script(src='/js/es6/compiled/sockets.js')
 
-    block scripts
+  block scripts
