--- a/app/less/app.less
+++ b/app/less/app.less
@@ -10,16 +10,30 @@ glyphicon-home:before{
   margin-right:5px;
 }
 
-#logo{
-  height:75px;
-  width:75px;
-  margin:-15px;
+
+
+html body{
+  height:100%;
+  background-color:#171717;
 }
 
-html{
-  height:100%;
-  background-color:rgb(12, 12, 12);
-  body{
-    background-color:rgb(12, 12, 12);
+
+#imgContainer{
+  position:relative;
+
+  #divButton{
+    position:absolute;
+    top:10px;
+    left:47.5%;
+    background-color:red;
+    height:50px;
+    width:50px;
   }
+
+  #logo{
+    height:30%;
+    width:40%;
+    margin: 0% 30%;
+  }
+
 }
