--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,4 +1,6 @@
 extends ../shared/template
 
 block content
-  img#logo(src='img/player2.jpg')
+  #imgContainer
+    img#logo(src='img/player2.jpg')
+    #divButton
