--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -36,7 +36,7 @@ html
 
               ul.nav.navbar-nav.navbar-right
                 li.dropdown
-                    a.dropdown-toggle(href='http://www.jquery2dotnet.com', data-toggle='dropdown')
+                    a.dropdown-toggle(href='#', data-toggle='dropdown')
                       | Register
                       b.caret
                     ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
