register up-2-date

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,33 +1,29 @@
-glyphicon-home:before{
+.glyphicon-home:before{
   margin-right:5px;
 }
-
 .glyphicon-user:before{
   margin-right:5px;
 }
-
 .glyphicon-search:before{
   margin-right:5px;
 }
-
-
-
 html body{
   height:100%;
   background-color:#171717;
 }
 
 
+// LANDING PAGE
+
 #imgContainer{
   position:relative;
 
   #divButton{
     position:absolute;
-    top:10px;
-    left:47.5%;
-    background-color:red;
-    height:50px;
-    width:50px;
+    top:34%;
+    left:43%;
+    height:36.5%;
+    width:14%;
   }
 
   #logo{
@@ -35,5 +31,6 @@ html body{
     width:40%;
     margin: 0% 30%;
   }
-
 }
+
+// END LANDING PAGE
