--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -3,4 +3,4 @@ extends ../shared/template
 block content
   #imgContainer
     img#logo(src='img/player2.jpg')
-    #divButton
+    a#divButton(href='/users')
