--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -10,8 +10,10 @@ html
     link(href='/less/app.css', rel='stylesheet')
     link(href='/css/normalize.css', rel='stylesheet')
     link(href='/css/buttons.css', rel='stylesheet')
+    link(href='/css/bootstrap-select.css', rel='stylesheet')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css')
+
 
 
   body
@@ -41,50 +43,72 @@ html
 
 
             ul.nav.navbar-nav.navbar-right
-              li.dropdown
+              if(!isOnline)
+                li.dropdown
+                    a.dropdown-toggle(href='#', data-toggle='dropdown')
+                      | Register
+                      b.caret
+                    ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
+                      li
+                        .row
+                          .col-md-12
+                            form#login-nav.form(role='form', method='post', action='/register', accept-charset='UTF-8')
+                              .form-group
+                                label(for='email') Email address
+                                input#email.form-control(type='email', name='email' placeholder='Email address', required='required')
+                              .form-group
+                                label(for='password') Password
+                                input#password.form-control(type='password', name='password', placeholder='Password', required='required')
+                              .form-group
+                                label(for='name') Name
+                                input#name.form-control(type='text', name='username', placeholder='Username', required='required')
+                              .form-group
+                                label(for='age') Age
+                                input#age.form-control(type='text', name='age', placeholder='Age', required='required')
+                              .form-group
+                                label(for='location') Location
+                                input#location.form-control(type='text', name='location', placeholder='City', required='required')
+                              .form-group
+                                label(for='gender') Gender
+                                  input#gender(type='radio', name='gender', value='male')
+                                  label(for='Male') Male
+                                  input#gender(type='radio', name='gender', value='female')
+                                  label(for='Female') Female
+
+                              .form-group
+                                label(for='orientation') Seeking
+                                select.selectpicker
+                                  option Male
+                                  option Female
+                                  option Both
+
+                              .form-group
+                                button.btn.btn-primary.btn-block(type='submit') Register
+
+
+                li.dropdown
                   a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Register
+                    | Sign in
                     b.caret
                   ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
                     li
                       .row
                         .col-md-12
-                          form#login-nav.form(role='form', method='post', action='/register', accept-charset='UTF-8')
+                          form#login-nav.form(role='form', method='post', action='/login', accept-charset='UTF-8')
                             .form-group
                               label.sr-only(for='exampleInputEmail2') Email address
                               input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
                             .form-group
                               label.sr-only(for='exampleInputPassword2') Password
                               input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
+                            .checkbox
+                              label
+                                input(type='checkbox')
+                                | Remember me
                             .form-group
-                              button.btn.btn-primary.btn-block(type='submit') Register
-
-
-
-              li.dropdown
-                a.dropdown-toggle(href='#', data-toggle='dropdown')
-                  | Sign in
-                  b.caret
-                ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
-                  li
-                    .row
-                      .col-md-12
-                        form#login-nav.form(role='form', method='post', action='/login', accept-charset='UTF-8')
-                          .form-group
-                            label.sr-only(for='exampleInputEmail2') Email address
-                            input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
-                          .form-group
-                            label.sr-only(for='exampleInputPassword2') Password
-                            input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
-                          .checkbox
-                            label
-                              input(type='checkbox')
-                              | Remember me
-                          .form-group
-                            button.btn.btn-success.btn-block(type='submit') Sign in
+                              button.btn.btn-success.btn-block(type='submit') Sign in
               //indent
-              - console.log(isLogin)
-              if(isLogin !== null)
+              if(isOnline)
                 li
                   a(href='/logout') Logout
           //
