--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,16 +1,17 @@
-.glyphicon-home:before{
-  margin-right:5px;
-}
-.glyphicon-user:before{
-  margin-right:5px;
-}
-.glyphicon-search:before{
-  margin-right:5px;
-}
+.glyphicon-home:before, .glyphicon-user:before, .glyphicon-search:before, .glyphicon-list:before{
+  margin-right:7px;
+}// nav-bar glyph margin
+
 html body{
   height:100%;
   background-color:#171717;
-}
+}// background color
+
+// END STOCK CSS
+
+
+
+
 
 
 // LANDING PAGE
@@ -34,3 +35,41 @@ html body{
 }
 
 // END LANDING PAGE
+
+// DASHBOARD CAROUSEL
+#carousel-example-generic{
+  .carousel-inner{
+    .item{
+      width:20%;
+      margin-left:40%;
+      img{
+        width:100%;
+      }
+      .carousel-caption{
+        position:static;
+        width:100%;
+      }
+    }
+  }
+}
+
+// END CAROUSEL
+
+// END DASHBOARD
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// -PAGE END
