--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -129,5 +129,6 @@ html
     script(src='/js/es5/main.js')
     script(src='/js/es6/compiled/main.js')
     script(src='/js/es6/compiled/sockets.js')
+    script(src='/js/es6/compiled/message.js')
 
     block scripts
