--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -11,111 +11,115 @@ html
     link(href='/css/normalize.css', rel='stylesheet')
     link(href='/css/buttons.css', rel='stylesheet')
     link(href='/css/bootstrap-select.css', rel='stylesheet')
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css')
-
+    link(href='/css/bootstrap.css', rel='stylesheet')
+    link(href='/css/bootstrap-theme.css', rel='stylesheet')
+    link(href='/fonts/glyphicons-halflings-regular.svg', rel='stylesheet', type='text/css')
+    link(href='/fonts/glyphicons-halflings-regular.woff', rel='stylesheet', type='text/css')
+    link(href='/fonts/glyphicons-halflings-regular.ttf' rel='stylesheet', type='text/css')
+    link(href='/fonts/fontawesome-webfont.tff', rel='font', type='text/css')
+    link(href='/fonts/fontawesome-webfont.woff', rel='stylesheet', type='text/css')
 
 
   body
-  .container
-    .row
-      .col-md-12
-        nav.navbar.navbar-inverse(role='navigation')
-          //
-             Brand and toggle get grouped for better mobile display
-          .navbar-header
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand P2
-          //
-             Collect the nav links, forms, and other content for toggling
-          #bs-example-navbar-collapse-1.collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li
-                a.glyphicon.glyphicon-home(href='/') Home
-              li
-                a.glyphicon.glyphicon-list(href='/users/dashboard') Dashboard
-              - if(typeof('#{locals.userId}') === string)
+    .container
+      .row
+        .col-md-12
+          nav.navbar.navbar-inverse(role='navigation')
+            //
+               Brand and toggle get grouped for better mobile display
+            .navbar-header
+              button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.navbar-brand P2
+            //
+               Collect the nav links, forms, and other content for toggling
+            #bs-example-navbar-collapse-1.collapse.navbar-collapse
+              ul.nav.navbar-nav
                 li
-                  a.glyphicon.glyphicon-user(href='/users/#{locals.userId.toString()}') Profile
-              li
-                a.glyphicon.glyphicon-search(href='/users') Search
+                  a.glyphicon.glyphicon-home(href='/') Home
+                li
+                  a.glyphicon.glyphicon-list(href='/users/dashboard') Dashboard
+                - if('#{locals.userId}')
+                  li
+                    a.glyphicon.glyphicon-user(href='/users/profile') Profile
+                li
+                  a.glyphicon.glyphicon-search(href='/users') Search
 
 
-            ul.nav.navbar-nav.navbar-right
-              if(!isOnline)
-                li.dropdown
+              ul.nav.navbar-nav.navbar-right
+                if(!isOnline)
+                  li.dropdown
+                      a.dropdown-toggle(href='#', data-toggle='dropdown')
+                        | Register
+                        b.caret
+                      ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
+                        li
+                          .row
+                            .col-md-12
+                              form#login-nav.form(role='form', method='post', action='/register', accept-charset='UTF-8')
+                                .form-group
+                                  label(for='email') Email address
+                                  input#email.form-control(type='email', name='email' placeholder='Email address', required='required')
+                                .form-group
+                                  label(for='password') Password
+                                  input#password.form-control(type='password', name='password', placeholder='Password', required='required')
+                                .form-group
+                                  label(for='name') Name
+                                  input#name.form-control(type='text', name='username', placeholder='Username', required='required')
+                                .form-group
+                                  label(for='age') Age
+                                  input#age.form-control(type='text', name='age', placeholder='Age', required='required')
+                                .form-group
+                                  label(for='location') Location
+                                  input#location.form-control(type='text', name='location', placeholder='City', required='required')
+                                .form-group
+                                  label(for='gender') Gender
+                                    input#gender(type='radio', name='gender', value='male')
+                                    label(for='Male') Male
+                                    input#gender(type='radio', name='gender', value='female')
+                                    label(for='Female') Female
+
+                                .form-group
+                                  label(for='orientation') Seeking
+                                  select
+                                    option(name='male' value='male') Male
+                                    option(name='female', value='female') Female
+                                    option(name='both', value='both') Both
+
+                                .form-group
+                                  button.btn.btn-primary.btn-block(type='submit') Register
+
+
+                  li.dropdown
                     a.dropdown-toggle(href='#', data-toggle='dropdown')
-                      | Register
+                      | Sign in
                       b.caret
                     ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
                       li
                         .row
                           .col-md-12
-                            form#login-nav.form(role='form', method='post', action='/register', accept-charset='UTF-8')
+                            form#login-nav.form(role='form', method='post', action='/login', accept-charset='UTF-8')
                               .form-group
-                                label(for='email') Email address
-                                input#email.form-control(type='email', name='email' placeholder='Email address', required='required')
+                                label.sr-only(for='exampleInputEmail2') Email address
+                                input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
                               .form-group
-                                label(for='password') Password
-                                input#password.form-control(type='password', name='password', placeholder='Password', required='required')
+                                label.sr-only(for='exampleInputPassword2') Password
+                                input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
+                              .checkbox
+                                label
+                                  input(type='checkbox')
+                                  | Remember me
                               .form-group
-                                label(for='name') Name
-                                input#name.form-control(type='text', name='username', placeholder='Username', required='required')
-                              .form-group
-                                label(for='age') Age
-                                input#age.form-control(type='text', name='age', placeholder='Age', required='required')
-                              .form-group
-                                label(for='location') Location
-                                input#location.form-control(type='text', name='location', placeholder='City', required='required')
-                              .form-group
-                                label(for='gender') Gender
-                                  input#gender(type='radio', name='gender', value='male')
-                                  label(for='Male') Male
-                                  input#gender(type='radio', name='gender', value='female')
-                                  label(for='Female') Female
-
-                              .form-group
-                                label(for='orientation') Seeking
-                                select.selectpicker
-                                  option Male
-                                  option Female
-                                  option Both
-
-                              .form-group
-                                button.btn.btn-primary.btn-block(type='submit') Register
-
-
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    | Sign in
-                    b.caret
-                  ul.dropdown-menu(style='padding: 15px; min-width: 250px;')
-                    li
-                      .row
-                        .col-md-12
-                          form#login-nav.form(role='form', method='post', action='/login', accept-charset='UTF-8')
-                            .form-group
-                              label.sr-only(for='exampleInputEmail2') Email address
-                              input#exampleInputEmail2.form-control(type='email', name='email' placeholder='Email address', required='required')
-                            .form-group
-                              label.sr-only(for='exampleInputPassword2') Password
-                              input#exampleInputPassword2.form-control(type='password', name='password' placeholder='Password', required='required')
-                            .checkbox
-                              label
-                                input(type='checkbox')
-                                | Remember me
-                            .form-group
-                              button.btn.btn-success.btn-block(type='submit') Sign in
-              //indent
-              if(isOnline)
-                li
-                  a(href='/logout') Logout
-          //
-             /.navbar-collapse
+                                button.btn.btn-success.btn-block(type='submit') Sign in
+                //indent
+                if(isOnline)
+                  li
+                    a(href='/logout') Logout
+            //
+               /.navbar-collapse
 
 
 
@@ -124,7 +128,7 @@ html
     block content
 
     script(src='/js/vendor/jquery-2.1.1.js')
-    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+    script(src='/js/vendor/bootstrap.min.js')
     script(src='/js/vendor/lodash-2.4.1.js')
     script(src='/js/vendor/moment-2.6.0.js')
     script(src='/js/vendor/traceur.js')
