--- a/app/views/users/dashboard.jade
+++ b/app/views/users/dashboard.jade
@@ -3,9 +3,8 @@ extends ../shared/template
 
 
 block content
-
+  //- h3#carouselTitle Gamers near you!
   #carousel-example-generic.carousel.slide(data-ride='carousel')
-
     ol.carousel-indicators
       li.active(data-target='#carousel-example-generic', data-slide-to='0')
       li(data-target='#carousel-example-generic', data-slide-to='1')
@@ -15,7 +14,7 @@ block content
       .item.active
         img(src='/img/default.jpg', alt='/img/default.jpg')
         .carousel-caption
-          | specific caption1 
+          | specific caption1
       .item
         img(src='/img/default2.jpeg', alt='/img/default.jpg')
         .carousel-caption
@@ -24,33 +23,9 @@ block content
         img(src='/img/default3.jpeg', alt='/img/default.jpg')
         .carousel-caption
           | specific caption3
-      | Under carousel
+      |'
 
     a.left.carousel-control(href='#carousel-example-generic', data-slide='prev')
       span.glyphicon.glyphicon-chevron-left
     a.right.carousel-control(href='#carousel-example-generic', data-slide='next')
       span.glyphicon.glyphicon-chevron-right
-
-
-
-
-
-
-
-    // INCORRECT PAGE FOR THIS MODAL
-
-  button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#myModal')
-    | Modal
-  //
-     Modal
-  #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-    .modal-dialog
-      .modal-content
-        .modal-header
-          button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-          h4#myModalLabel.modal-title Modal title
-        .modal-body
-          | ...
-        .modal-footer
-          button.btn.btn-default(type='button', data-dismiss='modal') Close
-          button.btn.btn-primary(type='button') Save changes
