talking to the api

--- a/app/views/users/index.jade
+++ b/app/views/users/index.jade
@@ -3,3 +3,6 @@ extends ../shared/template
 block content
   input#search(type='text', placeholder='Search it dawg')
   button#submitSearch.btn-primary GOGOGOGO
+
+block scripts
+  script(src='/js/es6/compiled/index.js')
