--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -133,5 +133,6 @@ html
     script(src='/js/es6/compiled/main.js')
     script(src='/js/es6/compiled/sockets.js')
     script(src='/js/es6/compiled/message.js')
+    script(src='/js/es6/compiled/chat.js')
 
     block scripts
