--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -13,11 +13,11 @@ html
     link(href='/css/bootstrap-select.css', rel='stylesheet')
     link(href='/css/bootstrap.css', rel='stylesheet')
     link(href='/css/bootstrap-theme.css', rel='stylesheet')
-    link(href='/fonts/glyphicons-halflings-regular.svg', rel='stylesheet', type='text/css')
-    link(href='/fonts/glyphicons-halflings-regular.woff', rel='stylesheet', type='text/css')
-    link(href='/fonts/glyphicons-halflings-regular.ttf' rel='stylesheet', type='text/css')
+    link(href='/fonts/glyphicons-halflings-regular.svg', rel='font', type='text/css')
+    link(href='/fonts/glyphicons-halflings-regular.woff', rel='font', type='text/css')
+    link(href='/fonts/glyphicons-halflings-regular.ttf' rel='font', type='text/css')
     link(href='/fonts/fontawesome-webfont.tff', rel='font', type='text/css')
-    link(href='/fonts/fontawesome-webfont.woff', rel='stylesheet', type='text/css')
+    link(href='/fonts/fontawesome-webfont.woff', rel='font', type='text/css')
 
 
   body
@@ -40,9 +40,10 @@ html
               ul.nav.navbar-nav
                 li
                   a.glyphicon.glyphicon-home(href='/') Home
-                li
-                  a.glyphicon.glyphicon-list(href='/users/dashboard') Dashboard
-                - if('#{locals.userId}')
+                if(locals.user)
+                  li
+                    a.glyphicon.glyphicon-list(href='/users/dashboard') Dashboard
+                if(locals.user)
                   li
                     a.glyphicon.glyphicon-user(href='/users/profile') Profile
                 li
@@ -50,7 +51,7 @@ html
 
 
               ul.nav.navbar-nav.navbar-right
-                if(!isOnline)
+                if(!locals.user)
                   li.dropdown
                       a.dropdown-toggle(href='#', data-toggle='dropdown')
                         | Register
@@ -68,7 +69,7 @@ html
                                   input#password.form-control(type='password', name='password', placeholder='Password', required='required')
                                 .form-group
                                   label(for='name') Name
-                                  input#name.form-control(type='text', name='username', placeholder='Username', required='required')
+                                  input#name.form-control(type='text', name='name', placeholder='Name', required='required')
                                 .form-group
                                   label(for='age') Age
                                   input#age.form-control(type='text', name='age', placeholder='Age', required='required')
@@ -77,14 +78,14 @@ html
                                   input#location.form-control(type='text', name='location', placeholder='City', required='required')
                                 .form-group
                                   label(for='gender') Gender
-                                    input#gender(type='radio', name='gender', value='male')
-                                    label(for='Male') Male
-                                    input#gender(type='radio', name='gender', value='female')
-                                    label(for='Female') Female
+                                  input#gender(type='radio', name='gender', value='male')
+                                  label(for='male') Male
+                                  input#gender(type='radio', name='gender', value='female')
+                                  label(for='female') Female
 
                                 .form-group
-                                  label(for='orientation') Seeking
-                                  select
+                                  label(for='orientation', name='orientation') Seeking
+                                  select.selectpicker
                                     option(name='male' value='male') Male
                                     option(name='female', value='female') Female
                                     option(name='both', value='both') Both
@@ -115,7 +116,7 @@ html
                               .form-group
                                 button.btn.btn-success.btn-block(type='submit') Sign in
                 //indent
-                if(isOnline)
+                if(locals.user)
                   li
                     a(href='/logout') Logout
             //
