--- a/app/views/users/profile.jade
+++ b/app/views/users/profile.jade
@@ -5,33 +5,58 @@ block content
     #profilePic.well
       h6 profilePic
       if(!isOwner)
-        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#myModal')
+        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#picModal')
           | Edit
 
     #info.well
       h6 info
       if(!isOwner)
-        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#myModal')
+        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#infoModal')
           | Edit
 
     #about.well
       h6 about
       if(!isOwner)
-        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#myModal')
+        button.btn.btn-primary.btn-sm(data-toggle='modal', data-target='#aboutModal')
           | Edit
 
 
 
 
+    #modalDescribe
+      #picModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='picModalLabel', aria-hidden='true')
+        .modal-dialog
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+              h4#picModalLabel.modal-title Title variable
+            .modal-body
+              | variable content1
+            .modal-footer
+              button.btn.btn-default(type='button', data-dismiss='modal') Close
+              button.btn.btn-primary(type='button') Save changes
 
-    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-            h4#myModalLabel.modal-title Title variable
-          .modal-body
-            | variable content
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-            button.btn.btn-primary(type='button') Save changes
+      #infoModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+        .modal-dialog
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+              h4#myModalLabel.modal-title Title variable
+            .modal-body
+              | variable content2
+            .modal-footer
+              button.btn.btn-default(type='button', data-dismiss='modal') Close
+              button.btn.btn-primary(type='button') Save changes
+
+
+      #aboutModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+        .modal-dialog
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+              h4#myModalLabel.modal-title Title variable
+            .modal-body
+              | variable content3
+            .modal-footer
+              button.btn.btn-default(type='button', data-dismiss='modal') Close
+              button.btn.btn-primary(type='button') Save changes
