profile now uses include heavily

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -68,8 +68,8 @@ html
                                   label(for='password') Password
                                   input#password.form-control(type='password', name='password', placeholder='Password', required='required')
                                 .form-group
-                                  label(for='name') Name
-                                  input#name.form-control(type='text', name='name', placeholder='Name', required='required')
+                                  label(for='name') User Name
+                                  input#name.form-control(type='text', name='username', placeholder='Name', required='required')
                                 .form-group
                                   label(for='age') Age
                                   input#age.form-control(type='text', name='age', placeholder='Age', required='required')
