--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,4 +1,11 @@
-.glyphicon-home:before, .glyphicon-user:before, .glyphicon-search:before, .glyphicon-list:before{
+.glyphicon-home:before,
+.glyphicon-user:before,
+.glyphicon-search:before,
+.glyphicon-list:before,
+.glyphicon-send:before,
+.glyphicon-off:before,
+.glyphicon-pencil:before,
+.glyphicon-log-in:before,{
   margin-right:7px;
 }// nav-bar glyph margin
 
@@ -13,10 +20,45 @@ html body{
 
 // END STOCK CSS
 
+.message-from{
+  width:205px;
+  position:relative;
+  display:inline-block;
+  .from.from-pic{
+    display:inline-block;
+    border-radius: 4px;
+    width:40px;
+    height: 40px;
+  }
+  .message-body{
+    margin-left:5px;
+    display:inline-block;
+    position:relative;
+    left:10px;
+    top:10px;
+    max-width:160px;
+  }
+}
 
-
-
-
+.message-to{
+  width:205px;
+  position:relative;
+  display:inline-block;
+  .to.to-pic{
+    border-radius: 4px;
+    display:inline-block;
+    width:40px;
+    height: 40px;
+  }
+  .message-body-to{
+    margin-right:5px;
+    display:inline-block;
+    position:relative;
+    left:10px;
+    top:10px;
+    max-width:160px;
+  }
+}
 
 // LANDING PAGE
 
