--- a/app/less/app.less
+++ b/app/less/app.less
@@ -20,11 +20,18 @@ html body{
 
 // END STOCK CSS
 
+
+
 .message-from{
-  width:205px;
+  border-radius:5px;
+  background-color:white;
+  width:210px;
   position:relative;
   display:inline-block;
   .from.from-pic{
+    position:relative;
+    bottom:5px;
+    left:5px;
     display:inline-block;
     border-radius: 4px;
     width:40px;
@@ -35,30 +42,30 @@ html body{
     display:inline-block;
     position:relative;
     left:10px;
-    top:10px;
-    max-width:160px;
+    top:5px;
+    max-width:150px;
   }
 }
-
-.message-to{
-  width:205px;
-  position:relative;
-  display:inline-block;
-  .to.to-pic{
-    border-radius: 4px;
-    display:inline-block;
-    width:40px;
-    height: 40px;
-  }
-  .message-body-to{
-    margin-right:5px;
-    display:inline-block;
-    position:relative;
-    left:10px;
-    top:10px;
-    max-width:160px;
-  }
-}
+//
+// .message-to{
+//   width:205px;
+//   position:relative;
+//   display:inline-block;
+//   .to.to-pic{
+//     border-radius: 4px;
+//     display:inline-block;
+//     width:40px;
+//     height: 40px;
+//   }
+//   .message-body-to{
+//     margin-right:5px;
+//     display:inline-block;
+//     position:relative;
+//     left:10px;
+//     top:10px;
+//     max-width:160px;
+//   }
+// }
 
 // LANDING PAGE
 
@@ -167,7 +174,19 @@ html body{
 //END PROFILE PAGE
 
 
-
+// TEXT AREAS LOL
+#modalText{
+  resize:none;
+}
+#messageText{
+  resize:none;
+  position:relative;
+  top:13px;
+  height:34px;
+  margin-right:5px;
+  line-height:30px;
+  overflow:hidden;
+}
 
 
 
