--- a/app/views/users/profile/about.jade
+++ b/app/views/users/profile/about.jade
@@ -9,9 +9,9 @@
     .modal-content
       .modal-header
         button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-        h4#myModalLabel.modal-title Title variable
+        h4#myModalLabel.modal-title About
       .modal-body
-        | variable content3
+        textarea#modalText(rows=10, cols=89)
       .modal-footer
         button.btn.btn-default(type='button', data-dismiss='modal') Close
         button.btn.btn-primary(type='button') Save changes
