--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -60,19 +60,15 @@ html
                       li
                         .row
                           .col-md-12
-                            .message-from
+                            .message-from(data-toggle='modal', data-target='#fakeModal')
                               img.from.from-pic(src='/img/default.jpg')
                               .message-body
                                 | So I like think you're pretty cool and stuff...
-                            .message-to
-                              .message-body-to
+                            hr
+                            .message-from(data-toggle='modal', data-target='#fakeModal')
+                              img.from.from-pic(src='/img/default.jpg')
+                              .message-body
                                 | So I like think you're pretty cool and stuff...
-                              img.to.to-pic(src='/img/default2.jpeg')
-
-
-
-
-
 
 
                 if(!locals.user)
@@ -146,6 +142,21 @@ html
             //
                /.navbar-collapse
 
+
+
+
+    #fakeModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='fakeLabel', aria-hidden='true')
+      .modal-dialog
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+            h4#fakeLabel.modal-title Message Subject variable
+          .modal-body
+              textarea#modalText(rows=10, cols=89)
+              //1 col = 6px
+          .modal-footer
+            textarea#messageText(rows=1, cols=50)
+            button.btn.btn-primary(type='button') Send
 
 
 
