rough browse page

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -47,7 +47,7 @@ html
                   li
                     a.glyphicon.glyphicon-user(href='/users/profile') Profile
                 li
-                  a.glyphicon.glyphicon-search(href='/users/browse') Search
+                  a.glyphicon.glyphicon-search(href='/users/browse') Browse
 
 
               ul.nav.navbar-nav.navbar-right
