--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -1,16 +1,24 @@
 extends ../shared/template
 
 block content
-  #currentFavorites
-    each game in user.games
-      .div(data-id= game.id)
-      .picture(data-url= game.url)
-        img(src= game.url)
-      .name= game.title
-  input#search(type='text', placeholder='Search it dawg')
-  button#submitSearch.btn-primary GOGOGOGO
 
-  #results
+  h1 Browse Locals in Your Area!!!!!!
+  select#orientation.selectpicker
+    option(name='straight' value='straight') Straight
+    option(name='gay', value='gay') Gay
+    option(name='bi', value='bi') Bi
+
+  select#sex.selectpicker
+    option(name='male' value='male') Male
+    option(name='female', value='female') Female
+
+  //- select#games.selectpicker
+
+  select#distance.selectpicker
+    option(name='25' value='25') 25 Miles
+    option(name='50' value='50') 50 Miles
+    option(name='100' value='100') 100 Miles
+    option(name='150' value='150') 150 Miles
+    option(name='anywhere' value='anywhere') Anywhere
 
 block scripts
-  script(src='/js/es6/compiled/index.js')
