--- a/app/less/app.less
+++ b/app/less/app.less
@@ -21,7 +21,7 @@ html body{
 // END STOCK CSS
 
 
-
+// NAVBAR MESSAGING
 .message-from{
   border-radius:5px;
   background-color:white;
@@ -66,6 +66,43 @@ html body{
 //     max-width:160px;
 //   }
 // }
+
+// END NAVBAR MESSAGING
+
+
+
+
+
+
+
+
+// SEARCH PAGE YALL
+
+#results{
+  display:inline-block;
+  width:100%;
+  .gameContainer.well{
+    margin-right:25px;
+    margin-top:5px;
+    display:inline-block;
+    width:200px;
+    img.image{
+      height:200px;
+      width:150px;
+    }
+  }
+}
+// END SEARCH PAGE
+
+
+
+
+
+
+
+
+
+
 
 // LANDING PAGE
 
