added delete saved game functionality

--- a/app/views/users/currentFavorites.jade
+++ b/app/views/users/currentFavorites.jade
@@ -1,5 +1,8 @@
 each game in user.games
   .div(data-id= game.id)
+    form
+      input.gameId(type= 'hidden', name= 'gameId', value= game.id)
+      button.deleteGame X
     .picture(data-url= game.url)
     img(src= game.url)
     .name= game.title
