--- a/app/views/users/index.jade
+++ b/app/views/users/index.jade
@@ -2,11 +2,7 @@ extends ../shared/template
 
 block content
   #currentFavorites
-    each game in user.games
-      .div(data-id= game.id)
-      .picture(data-url= game.url)
-        img(src= game.url)
-      .name= game.title
+    include currentFavorites
   input#search(type='text', placeholder='Search it dawg')
   button#submitSearch.btn-primary GOGOGOGO
 
