--- a/app/less/app.less
+++ b/app/less/app.less
@@ -18,6 +18,18 @@ html body{
   width:100%;
 }
 
+#gender1{
+  margin-left:15px;
+  margin-right:5px;
+  #male{
+    margin-right:5px;
+  }
+}
+#gender2{
+  margin-left:25px;
+  margin-right:5px;
+}
+
 // END STOCK CSS
 
 
