--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -4,22 +4,27 @@ block content
 
 
   h1 Browse Locals in Your Area!
-  select#orientation.form-control
-    option(name='straight' value='straight') Straight
-    option(name='gay', value='gay') Gay
-    option(name='bi', value='bi') Bi
+  #browse
+    select(name='orientation')#orientation.form-control
+      option(name='straight' value='straight') Straight
+      option(name='gay', value='gay') Gay
+      option(name='bi', value='bi') Bi
 
-  select#sex.form-control
-    option(name='male' value='male') Male
-    option(name='female', value='female') Female
+    select(name='sex')#sex.form-control
+      option(name='male' value='male') Male
+      option(name='female', value='female') Female
 
-  //- select#games.selectpicker
+    //- select#games.selectpicker
 
-  select#distance.form-control
-    option(name='25' value='25') 25 Miles
-    option(name='50' value='50') 50 Miles
-    option(name='100' value='100') 100 Miles
-    option(name='150' value='150') 150 Miles
-    option(name='anywhere' value='anywhere') Anywhere
+    select(name='distance')#distance.form-control
+      option(name='25' value='25') 25 Miles
+      option(name='50' value='50') 50 Miles
+      option(name='100' value='100') 100 Miles
+      option(name='150' value='150') 150 Miles
+      option(name='anywhere' value='anywhere') Anywhere
+
+    button#filter filter matches
+  #filteredMatches
 
 block scripts
+  script(src='/js/es6/compiled/browse.js')
