--- a/app/views/users/dashboard.jade
+++ b/app/views/users/dashboard.jade
@@ -28,3 +28,7 @@ block content
       span.glyphicon.glyphicon-chevron-left
     a.right.carousel-control(href='#carousel-example-generic', data-slide='next')
       span.glyphicon.glyphicon-chevron-right
+
+  .heading
+    h1 Filter Your Results
+  img.search(src='/img/player2copy.jpg')
