--- a/app/less/app.less
+++ b/app/less/app.less
@@ -58,30 +58,68 @@ html body{
     max-width:150px;
   }
 }
-//
-// .message-to{
-//   width:205px;
-//   position:relative;
-//   display:inline-block;
-//   .to.to-pic{
-//     border-radius: 4px;
-//     display:inline-block;
-//     width:40px;
-//     height: 40px;
-//   }
-//   .message-body-to{
-//     margin-right:5px;
-//     display:inline-block;
-//     position:relative;
-//     left:10px;
-//     top:10px;
-//     max-width:160px;
-//   }
-// }
-
 // END NAVBAR MESSAGING
 
+// BROWSE PAGE
+#browse{
+  text-align:center;
+}
+#contain.well{
+  border-color:black;
+  background-image:none;
+  background-color:#1A1A1A;
+  margin-left:25%;
+  display:inline-block;
+  padding:5px;
+  height:38px;
+  width:50%;
+  #orientation{
+    display:inline-block;
+    width:30%;
+    margin-right:5%;
+    height:25px;
+  }
+  #sex{
+    display:inline-block;
+    width:30%;
+    margin-right:5%;
+    height:25px;
 
+  }
+  #distance{
+    display:inline-block;
+    width:30%;
+    height:25px;
+  }
+  #orientation, #sex, #distance{
+    border-color:black;
+    background-color:#313131;
+    background-image:none;
+    color:white;
+  }
+}
+#carouselBrowse{
+  width:50%;
+  margin-left:25%;
+  .carousel-inner{
+    .item{
+      width:20%;
+      margin-left:40%;
+      img{
+        width:100%;
+      }
+      .carousel-caption{
+        position:static;
+        width:100%;
+      }
+    }
+  }
+}// END CAROUSEL
+#carouselTitle{
+  color:white;
+}
+
+// END BROWSE PAGE
 
 
 
