--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -155,7 +155,7 @@ html
             button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
             h4#fakeLabel.modal-title Message Subject variable
           .modal-body
-              textarea#modalText(rows=10, cols=89)
+              #messages You will view your messages here
               //1 col = 6px
           .modal-footer
             textarea#messageText(rows=1, cols=50)
