--- a/app/views/users/browse.jade
+++ b/app/views/users/browse.jade
@@ -3,23 +3,50 @@ extends ../shared/template
 block content
 
 
-  h1 Browse Locals in Your Area!
-  select#orientation.form-control
-    option(name='straight' value='straight') Straight
-    option(name='gay', value='gay') Gay
-    option(name='bi', value='bi') Bi
+  h1#browse(style='color:white') Browse Locals in Your Area!
+  #contain.well
+    select#orientation.form-control
+      option(name='straight' value='straight') Straight
+      option(name='gay', value='gay') Gay
+      option(name='bi', value='bi') Bi
 
-  select#sex.form-control
-    option(name='male' value='male') Male
-    option(name='female', value='female') Female
+    select#sex.form-control
+      option(name='male' value='male') Male
+      option(name='female', value='female') Female
 
-  //- select#games.selectpicker
+    //- select#games.selectpicker
 
-  select#distance.form-control
-    option(name='25' value='25') 25 Miles
-    option(name='50' value='50') 50 Miles
-    option(name='100' value='100') 100 Miles
-    option(name='150' value='150') 150 Miles
-    option(name='anywhere' value='anywhere') Anywhere
+    select#distance.form-control
+      option(name='25' value='25') 25 Miles
+      option(name='50' value='50') 50 Miles
+      option(name='100' value='100') 100 Miles
+      option(name='150' value='150') 150 Miles
+      option(name='anywhere' value='anywhere') Anywhere
+
+  #carouselBrowse.carousel.slide(data-ride='carousel')
+    ol.carousel-indicators
+      li.active(data-target='#carouselBrowse', data-slide-to='0')
+      li(data-target='#carouselBrowse', data-slide-to='1')
+      li(data-target='#carouselBrowse', data-slide-to='2')
+
+    .carousel-inner
+      .item.active
+        img(src='/img/default.jpg', alt='/img/default.jpg')
+        .carousel-caption
+          | specific caption1
+      .item
+        img(src='/img/default2.jpeg', alt='/img/default.jpg')
+        .carousel-caption
+          | specific caption2
+      .item
+        img(src='/img/default3.jpeg', alt='/img/default.jpg')
+        .carousel-caption
+          | specific caption3
+      |'
+
+    a.left.carousel-control(href='#carouselBrowse', data-slide='prev')
+      span.glyphicon.glyphicon-chevron-left
+    a.right.carousel-control(href='#carouselBrowse', data-slide='next')
+      span.glyphicon.glyphicon-chevron-right
 
 block scripts
