--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -95,7 +95,7 @@ html
                                   input#age.form-control(type='text', name='age', placeholder='Age', required='required')
                                 .form-group
                                   label(for='location') Location
-                                  input#location.form-control(type='text', name='location', placeholder='City', required='required')
+                                  input#location.form-control(type='text', name='location', placeholder='Example: City, State', required='required')
                                 .form-group
                                   label(for='gender') Gender
                                   .form-control
